--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <title></title>
-
-
-
-
-
-
-<script src="/js/lib/lib.js" grunt-type="lib"></script><link rel="stylesheet" href="/a.css" grunt-type="css">
+<meta charset="UTF-8">
+<title></title>
+  <script src="/js/lib/lib.js" grunt-type="lib"></script>
+<script src="/a.js" grunt-type="js"></script>
+<script src="/js/b.js" grunt-type="js"></script>
+<link rel="stylesheet" href="/a.css" grunt-type="css">
 <link rel="stylesheet" href="/css/c.css" grunt-type="css">
 </head>
-<body><script src="/a.js" grunt-type="js"></script>
-<script src="/js/b.js" grunt-type="js"></script>
+<body>
 </body>
 </html>
