--- a/test/index.html
+++ b/test/index.html
@@ -2,14 +2,12 @@
 <html>
 <head lang="en">
 <meta charset="UTF-8">
-<title></title><script src="/js/lib/lib.js" grunt-type="lib"></script>
+<title></title>
 <script src="/a.js" grunt-type="js"></script>
 <script src="/js/b.js" grunt-type="js"></script>
-<link rel="stylesheet" href="/a.css" grunt-type="css">
-<script src="/a.js" grunt-type="css"></script>
-<link rel="stylesheet" href="/css/c.css" grunt-type="css">
-<script src="/js/b.js" grunt-type="css"></script>
 </head>
 <body>
+<script src="/a.js" grunt-type="js"></script>
+<script src="/js/b.js" grunt-type="js"></script>
 </body>
 </html>
