--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,11 @@
 <head lang="en">
 <meta charset="UTF-8">
 <title></title>
-<script src="/a.js" grunt-type="js"></script>
-<script src="/js/b.js" grunt-type="js"></script>
 </head>
 <body>
-<script src="/a.js" grunt-type="js"></script>
+<script src="/js/a.js" grunt-type="js"></script>
 <script src="/js/b.js" grunt-type="js"></script>
+<script src="/Gruntfile.js" grunt-type="rootjs"></script>
+<script src="/tasks/klyg_js2head.js" grunt-type="rootjs"></script>
 </body>
 </html>
