--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,11 @@
 <head lang="en">
 <meta charset="UTF-8">
 <title></title>
+<link rel="stylesheet" href="css/a.css" grunt-type="css">
+<link rel="stylesheet" href="css/c.css" grunt-type="css">
 </head>
 <body>
+<script src="js/a.js" grunt-type="js"></script>
+<script src="js/b.js" grunt-type="js"></script>
 </body>
 </html>
