增加清除文件中的tag

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 <meta charset="UTF-8">
-<title></title>
+<title>12323</title>
 <link rel="stylesheet" href="css/a.css" grunt-type="css">
 <link rel="stylesheet" href="css/c.css" grunt-type="css">
 </head>
