add file version

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
 <head lang="en">
 <meta charset="UTF-8">
 <title>12323</title>
-<link rel="stylesheet" href="css/a.css" grunt-type="css">
-<link rel="stylesheet" href="css/c.css" grunt-type="css">
+<link rel="stylesheet" href="css/a.css?v=1408670966259-v1.0" grunt-type="css">
+<link rel="stylesheet" href="css/c.css?v=1408670966259-v1.0" grunt-type="css">
 </head>
 <body>
-<script src="js/a.js" grunt-type="js"></script>
-<script src="js/b.js" grunt-type="js"></script>
+<script src="js/a.js?v=1408670965087-v1.0" grunt-type="js"></script>
+<script src="js/b.js?v=1408670965087-v1.0" grunt-type="js"></script>
 </body>
 </html>
